# Flood-Monitoring

./: .env  .gitignore  README.md  config.yaml  inference.py  main.py  pyproject.toml  requirements.txt  structure.txt
data/processed/: data_manifest.csv
scripts/: explore_data.ipynb  fetch_data.py  prepare_dataset.py  verify_image.py
src/: data_loader.py  data_utils.py  datamodule.py  dataset.py  lightning_module.py  logging_utils.py  losses.py  model.py  train.ipynb  train.py
src/flood_monitoring_sar_to_optical.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
